# project

./: .clang-format.py  .clang-tidy  .gitignore  .gitlab-ci.yml  .uncrustify.cfg  CMakeLists.txt
files/share/: icon.qrc  table1.csv
l10n/: myx_project_ru_RU.ts
src/myx_project/: CMakeLists.txt  DataBaseWork.cpp  DataBaseWork.hpp  dbconnect.cpp  dbconnect.hpp  dbconnect.ui  form.cpp  form.hpp  form.ui  main.cpp
